Use elementClasses from base Component instead of cssClass

--- a/demos/index.html
+++ b/demos/index.html
@@ -51,7 +51,7 @@
 				iconsList.appendChild(iconListItem);
 
 				new metal.LexiconIcon({
-					cssClass: 'icon-monospaced',
+					elementClasses: 'icon-monospaced',
 					element: iconListItem.querySelector('svg'),
 					spritemap: spritemap,
 					symbol: icon
@@ -63,7 +63,7 @@
 				flagsList.appendChild(flagListItem);
 
 				new metal.LexiconIcon({
-					cssClass: 'icon-monospaced',
+					elementClasses: 'icon-monospaced',
 					element: flagListItem.querySelector('svg'),
 					spritemap: spritemap,
 					symbol: flag
